Makes the font and type styles reflective of reality

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/etc/all.scss
@@ -88,6 +88,13 @@ $color-fun-green:          #156134;
 $color-dark-jewel:         #0C4F26;
 
 /**
+ * Fonts
+ */
+
+$font-regular: 'Proxima Nova', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
+$font-monospace: "Courier New", Courier, monospace;
+
+/**
  * Type styles
  */
 
@@ -95,12 +102,10 @@ $font-size-h1:          40px;
 $font-size-h2:          26px;
 $font-size-h3:          22px;
 $font-size-h4:          18px;
-$font-size-h5:          16px;
+$font-size-h5:          13px;
 $font-size-body:        13px; // Should be 16px eventually, work towards that end
-$font-size-code:        16px;
-$font-size-utility:     14px;
-$font-size-small:       12px;
-$font-size-miniscule:   10px;
+$font-size-code:        13px;
+$font-size-utility:     10px;
 
 $font-weight-h1:        100;
 $font-weight-h2:        bold;
@@ -110,5 +115,3 @@ $font-weight-h5:        bold;
 $font-weight-body:      normal;
 $font-weight-code:      normal;
 $font-weight-utility:   normal;
-$font-weight-small:     normal;
-$font-weight-miniscule: bold;
