--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/toolbar/TextItem.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/toolbar/TextItem.scss
@@ -33,6 +33,6 @@
  * cls: 'feature-description'
  */
 .feature-description {
-  font-size: $font-size-small;
+  font-size: $font-size-utility;
   top: 21px !important;
 }
