--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/Component.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/var/Ext/Component.scss
@@ -6,5 +6,5 @@
 $base-color: $color-charcoal !default;
 
 // Use the same font-family for everything
-$font-family: 'Proxima Nova', 'Helvetica Neue', Helvetica, Arial, sans-serif !default;
+$font-family: $font-regular;
 $color: $color-night-rider;
