Adds modals, menus, header, tooltip, and tabs to the visual style guide

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/window/Window.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/window/Window.scss
@@ -81,3 +81,9 @@
   $ui-body-color: $color-black,
   $ui-body-background-color: $color-white
 );
+
+
+/* Fixed modals for the visual style guide */
+.fixed-modal {
+  top: 0 !important;
+}
