Simplifies the code slightly by using defaults

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss
@@ -180,6 +180,8 @@
 
     border: 1px $color-gainsboro solid;
     margin: 0 3px 3px 0 !important;
+    height: 40px;
+    width: 80px;
 
     // Shell colors
     &.black {
